--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,46 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@font-face {
+  font-family: 'Calibre';
+  src: url('Calibre-Regular.woff2') format('woff2'),
+    url('Calibre-Regular.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Calibre';
+  src: url('Calibre-Bold.woff2') format('woff2'),
+    url('Calibre-Bold.woff') format('woff');
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Calibre';
+  src: url('Calibre-Black.woff2') format('woff2'),
+    url('Calibre-Black.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Calibre';
+  src: url('Calibre-Light.woff2') format('woff2'),
+    url('Calibre-Light.woff') format('woff');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+
+body, html {
+  font-family: 'Calibre', Arial, Helvetica, sans-serif;
+  font-size: 1.2rem;
+}
